--- a/notebooks/lab3_embedding.ipynb
+++ b/notebooks/lab3_embedding.ipynb
@@ -53,7 +53,7 @@
    ],
    "source": [
     "# Load mô hình Word2Vec pretrained\n",
-    "w2v_path = '../model/GoogleNews-vectors-negative300.bin.gz'\n",
+    "w2v_path = '../pretrained_models/GoogleNews-vectors-negative300.bin.gz'\n",
     "w2v_model = KeyedVectors.load_word2vec_format(w2v_path, binary=True)\n",
     "\n",
     "# Lấy toàn bộ từ vựng và vector tương ứng\n",
@@ -67,8 +67,8 @@
     "print(\"Đã giảm chiều:\", X_w2v_3d.shape)\n",
     "\n",
     "# Lưu kết quả\n",
-    "np.save('../model/w2v_3d_vectors.npy', X_w2v_3d)\n",
-    "np.save('../model/w2v_3d_words.npy', np.array(words_w2v))\n",
+    "np.save('../pretrained_models/w2v_3d_vectors.npy', X_w2v_3d)\n",
+    "np.save('../pretrained_models/w2v_3d_words.npy', np.array(words_w2v))\n",
     "\n",
     "print(\"Hoàn thành. Dữ liệu 3D được lưu vào:\")\n",
     "print(\" - w2v_3d_vectors.npy\")\n",
@@ -205,8 +205,8 @@
     "print(\"GloVe shape:\", X_glove.shape, \"→\", X_glove_3d.shape)\n",
     "\n",
     "# Lưu kết quả\n",
-    "np.save('../model/glove_3d_vectors.npy', X_glove_3d)\n",
-    "np.save('../model/glove_3d_words.npy', np.array(words_glove))"
+    "np.save('../pretrained_models/glove_3d_vectors.npy', X_glove_3d)\n",
+    "np.save('../pretrained_models/glove_3d_words.npy', np.array(words_glove))"
    ]
   },
   {
@@ -275,7 +275,7 @@
    ],
    "source": [
     "# Load mô hình fastText\n",
-    "ft_path = r'../model/wiki-news-300d-1M.vec/wiki-news-300d-1M.vec'\n",
+    "ft_path = r'../pretrained_models/wiki-news-300d-1M.vec/wiki-news-300d-1M.vec'\n",
     "ft_model = KeyedVectors.load_word2vec_format(ft_path)\n",
     "\n",
     "words_ft = list(ft_model.key_to_index.keys())\n",
@@ -286,8 +286,8 @@
     "print(\"fastText shape:\", X_ft.shape, \"→\", X_ft_3d.shape)\n",
     "\n",
     "# Lưu kết quả\n",
-    "np.save('../model/ft_3d_vectors.npy', X_ft_3d)\n",
-    "np.save('../model/ft_3d_words.npy', np.array(words_ft))"
+    "np.save('../pretrained_models/ft_3d_vectors.npy', X_ft_3d)\n",
+    "np.save('../pretrained_models/ft_3d_words.npy', np.array(words_ft))"
    ]
   },
   {
@@ -549,7 +549,7 @@
     "            break\n",
     "    return results\n",
     "\n",
-    "# Chọn ngẫu nhiên 1 từ có trong cả 3 model\n",
+    "# Chọn ngẫu nhiên 1 từ có trong cả 3 pretrained_models\n",
     "# common_words = set(w2v_model.key_to_index.keys()) & set(glove_model.key_to_index.keys()) & set(ft_model.key_to_index.keys())\n",
     "# random_word = random.choice(list(common_words))\n",
     "# print(f\"Từ được chọn ngẫu nhiên: '{random_word}'\\n\")\n",
